Address comments from reviewer
Remove a holdover from testing from the workflow file, tidy up a
comment, and flip the logic used to commit updates to the branch to
streamline the code and make the behaviour more obvious.

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -50,7 +50,8 @@ jobs:
               exit 1
             fi
             popd
-          if: ${{ github.repository != 't00sa/jules-docs' || github.ref != 'refs/heads/master' }}
+          if: ${{ github.repository != 'jules-lsm/jules-lsm.github.io'
+                  || github.ref != 'refs/heads/master' }}
 
         - name: Deploy documentation
           run: |
