Deploy documentation updates to gh-pages
Change the workflow and the release.py script to deploy to a gh-pages
branch rather than using the master branch as is presently the case.
This should bypass problems associated with the branch controls on
main.

In order to take advantage of this change, the github repo settings
need to be updated to serve the documentation from the gh-pages
branch.

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -66,7 +66,7 @@ jobs:
             # Capture the output status of the command, no matter what
             # it is, without causing the workflow to fail if it is
             # non-zero
-            python3 .github/scripts/release.py --verbose $TAG && STATUS=$? || STATUS=$?
+            python3 .github/scripts/release.py --verbose $TAG --gh-pages && STATUS=$? || STATUS=$?
 
             # Add a message to the summary
             if [[ $STATUS = 0 ]]; then
