--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -51,7 +51,7 @@ jobs:
               exit 1
             fi
             if make linkcheck; then
-              echo ":heavy_check_mark: Documentation link checking passed >> $GITHUB_STEP_SUMMARY
+              echo ":heavy_check_mark: Documentation link checking passed" >> $GITHUB_STEP_SUMMARY
             else
               echo ":x: Documentation link checking failed" >> $GITHUB_STEP_SUMMARY
               exit 1
